--- a/templates/home.html
+++ b/templates/home.html
@@ -78,7 +78,7 @@ p{	margin: 0 !important;	}
 <p style="font-size: 20px; line-height: 25%">Where you come to write stories <i>on</i> our board</p><br><p style="font-size: 20px"><i>when</i> you're bored.</p>
 </div>
 <br>
-<a class="button" href="login.html">LOGIN</a>
+<a class="button" href="/login">LOGIN</a>
 
 
 </body>
