added buttons and forms

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,25 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<title>Login</title>
-<style>
-
-
-</style>
-</head>
-
-<body>
-Login Page
-</body>
+  <head>
+    <title>Login</title>
+    <style>
+      
+      
+    </style>
+  </head>
+  
+  <body>
+    Login Page
+    <br><br>
+    <form method="POST">
+      Username: <input type="text" name="username">
+      <br><br>
+      Password: <input type="text" name="password">
+      <br><br>
+      <input type="submit" name="sub" value="Log in">
+      <input type="submit" name="sub" value="Cancel">
+    </form>
+    <br><br>
+    <button><a href="/home">Back to the Home Page</a></button>
+  </body>
 </html>
