image button jump to credits

--- a/templates/home.html
+++ b/templates/home.html
@@ -91,7 +91,7 @@ p{	margin: 0 !important;	}
 	<br>
 	<a class="button" href="login.html">LOGIN</a>
 	<br><br>
-	<img src="../static/down-caret.png" alt="more" height="40"/>
+	<a href="#credits"><img src="../static/down-caret.png" alt="more" height="40"/></a>
 </div>
 <div class="how">
 	<table>
@@ -105,13 +105,8 @@ p{	margin: 0 !important;	}
 		</tr>
 	</table>
 </div>
-<<<<<<< HEAD
-<br>
-<a class="button" href="/login">LOGIN</a>
-=======
-<div class="team">
+<div class="team" id="credits">
 	<p style="font-size: 80px; line-height: 200%">Our Team</p>
->>>>>>> added panels for home--inc
 
 	<table align="center" cellpadding="15">
 	<tr><td colspan="2" align="center">TEAM LEADER</td></tr>	
