--- a/templates/home.html
+++ b/templates/home.html
@@ -85,8 +85,8 @@ p{	margin: 0 !important;	}
 <div class="wrapper">
 	<img src="../static/ebook_circle.png" alt="storyboardlogo" width="250" height="250"/>
 	<div class="fade-in">
-		<p style="font-size: 100px; line-height: 200%">StoryBored</p>
-		<p style="font-size: 20px; line-height: 25%">Where you come to write stories <i>on</i> our board</p><br><p style="font-size: 20px"><i>when</i> you're bored.</p>
+		<center><p style="font-size: 100px; line-height: 200%; width: 33%">StoryBored</p>
+		<p style="font-size: 20px; line-height: 25%; line-width: 33%">Where you come to write stories <i>on</i> our board</p><br><p style="font-size: 20px; line-width: 33%"><i>when</i> you're bored.</p></center>
 	</div>
 	<br>
 	<a class="button" href="login.html">LOGIN</a>
