fixed button again

--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@ p{	margin: 0 !important;	}
 		<p style="font-size: 20px; line-height: 25%; line-width: 33%">Where you come to write stories <i>on</i> our board</p><br><p style="font-size: 20px; line-width: 33%"><i>when</i> you're bored.</p></center>
 	</div>
 	<br>
-	<a class="button" href="login.html">LOGIN</a>
+	<a class="button" href="/login">LOGIN</a>
 	<br><br>
 	<a href="#credits"><img src="../static/down-caret.png" alt="more" height="40"/></a>
 </div>
