added new post button

--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -2,7 +2,15 @@
 
 <h1>This is the userpage</h1>
 <br>
-<h2> Welcome! <u>{{uname}}</u> </h3>
+<h2> Welcome, <u>{{uname}}</u>! </h3>
+
+<button><a href="/newpost"> Make a New Post </a></button>
+
+<table>
+
+</table>
+
+<br><br>
 
 <button><a href = "/logout"> Logout </a></button>
 
