added table with books to userpage

--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -9,7 +9,9 @@
 <button><a href="{{url_for('newpost')}}"> Make a New Post </a></button>
 
 <table>
-
+   <tr>
+      <td>Hello</td>
+   </tr>
 </table>
 
 <br><br>
