--- a/static/style.css
+++ b/static/style.css
@@ -66,3 +66,10 @@
   animation-delay: 1.5s;
 }
 
+td {
+  width:  200px;
+  height: 200px;
+  background-image: url("Book.png");
+  background-repeat: no-repeat;
+  text-align: center;
+}
