added signup and confirm page

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,9 @@
       <input type="submit" name="sub" value="Log in">
       <input type="submit" name="sub" value="Cancel">
     </form>
+    <br>
+    <button><a href="{{url_for('signup')}}">Sign Up</a></button>
+    <br><br>
     DEVELOPER's NOTE: type any username, password = "pass" to sign in
     <br><br>
     <button><a href="/home">Back to the Home Page</a></button>
