added form for newport

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -6,6 +6,23 @@
 
 <br><br>
 
+<form method="POST">
+  Title: 
+  <br>
+  <input type="text" name="title">
+  <br>
+  Words (maximum 256 characters)
+  <br>
+  <input type="text" name="password" maxlength="256">
+  <br>
+  <textarea name="comment" form="usrform">Enter text here...</textarea>
+  <br>
+  <input type="submit" name="sub" value="Submit">
+</form>
+
+
+
+
 <button><a href="{{url_for('userpage')}}"> Back to the Main Page </a></button>
 
 <br><br>
