edited newpost form

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -11,11 +11,9 @@
   <br>
   <input type="text" name="title">
   <br>
-  Words (maximum 256 characters)
+  Body (maximum 256 characters)
   <br>
-  <input type="text" name="password" maxlength="256">
-  <br>
-  <textarea name="comment" form="usrform">Enter text here...</textarea>
+  <textarea name="Body" form="usrform" maxlength="256">Enter text here...</textarea>
   <br>
   <input type="submit" name="sub" value="Submit">
 </form>
