--- a/templates/home2.html
+++ b/templates/home2.html
@@ -12,5 +12,5 @@
     <p style="font-size:20px;margin-top:-10px;line-height:30px;">Where you come to write stories <i>on</i> our board<br/>
     <i>when</i> you're bored.</p>
 </div>
-<a id = "login-button" href="{{ url_for('temp_login') }}">LOGIN</a>
+<button class="btn"><a id = "login-button" href="{{ url_for('login') }}">LOGIN</a></button>
 {% endblock %}
