--- a/static/style.css
+++ b/static/style.css
@@ -40,7 +40,7 @@ body {
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
-.index .fade-in {
+.fade-in {
   opacity:0;  
   -webkit-animation:fadeIn ease-in 1; 
   -moz-animation:fadeIn ease-in 1;
