--- a/templates/home.html
+++ b/templates/home.html
@@ -109,22 +109,22 @@ p{	margin: 0 !important;	}
 	<p style="font-size: 80px; line-height: 200%">Our Team</p>
 
 	<table align="center" cellpadding="15">
-	<tr><td colspan="2" align="center">TEAM LEADER</td></tr>	
+	<tr><td class="credits">TEAM LEADER</td></tr>	
 		<tr>
 			<td><img src="../static/angela.png" alt="more" height="40"/></td>
 			<td>Angela Chan</td>
 		</tr>
-	<tr><td colspan="2" align="center">USER EXPERIENCE DESIGNER</td></tr>	
+	<tr><td class="credits">USER EXPERIENCE DESIGNER</td></tr>	
 		<tr>
 			<td><img src="../static/amanda.png" alt="more" height="40"/></td>
 			<td>Amanda Chiu</td>
 		</tr>
-	<tr><td colspan="2" align="center">BACKEND DEVELOPER</td></tr>	
+	<tr><td class="credits">BACKEND DEVELOPER</td></tr>	
 		<tr>
 			<td><img src="../static/leon.png" alt="more" height="40"/></td>
 			<td>Leon Cheng</td>
 		</tr>
-	<tr><td colspan="2" align="center">MIDDLEWARE DEVELOPER</td></tr>	
+	<tr><td class="credits">MIDDLEWARE DEVELOPER</td></tr>	
 		<tr>
 			<td><img src="../static/eric.png" alt="more" height="40"/></td>
 			<td>Eric Stringham</td>
