--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -10,7 +10,7 @@
 
 <table>
    <tr>
-      <td><a href="{{url_for('story')}}">Hello</a></td>
+      <td class=cell><a href="{{url_for('story')}}">Hello</a></td>
    </tr>
 </table>
 
