--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block title %}
+
+Create a New Post
+
+{% endblock %}
+
 {% block contents %}
 
 <h1> Create a new post </h1>
