--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -10,16 +10,14 @@ Create a New Post
 
 <h1> Create a new post </h1>
 
-<br><br>
+<br>
 
 <form method="POST">
-  Title: 
-  <br><br>
-  <input type="text" name="title">
+  <h3>Title:</h3> 
+  <input type="text" name="title" placeholder="Title">
   <br><br><br>
-  Body (maximum 256 characters)
-  <br><br>
-  <textarea name="Body" form="usrform" maxlength="256">Enter text here...</textarea>
+  <h3>Body (maximum 256 characters)</h3>
+  <textarea name="Body" form="usrform" maxlength="256" placeholder="Enter text here..."></textarea>
   <br>
   <input type="submit" name="sub" value="Submit" class="btn">
 </form>
