add buttons to story page

--- a/templates/story.html
+++ b/templates/story.html
@@ -4,4 +4,8 @@
 
 <h1> You are reading a story </h1>
 
+<button class="btn"><a href="/userpage">Back to the Main Page</a></button>
+<br>
+<button class="btn"><a href="/login">Logout</a></button>
+
 {% endblock %}
