finished up basic styling for login

--- a/static/style.css
+++ b/static/style.css
@@ -126,3 +126,12 @@ textarea {
     padding: 1%;
     border: none;
 }
+
+input[type="password"] {
+    padding: 1%;
+    border: none;
+}
+
+::-webkit-input-placeholder {
+    padding: 1%;
+}
