--- a/templates/login.html
+++ b/templates/login.html
@@ -8,10 +8,11 @@ Log In
 
 {% block contents %}
 
+<h1>Log in to Storybored</h1>
 <form method="POST">
-  Username: <input type="text" name="username">
+  Username: <input type="text" name="username" placeholder="Username">
   <br><br>
-  Password: <input type="text" name="password">
+  Password: <input type="password" name="password" placeholder="Password">
   <br><br>
   <input type="submit" name="sub" value="Log in" class="btn">
   <input type="submit" name="sub" value="Cancel" class="btn">
