added an edit post page

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -29,6 +29,6 @@ Create a New Post
 
 <br><br>
 
-<button class="btn"><a href="{{url_for('login')}}"> Log Out </a></button>
+<button class="btn"><a href="/logout"> Log Out </a></button>
 
 {% endblock %}
