--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -28,6 +28,6 @@ Welcome, {{uname}}
 
 <br><br>
 
-<button class="btn"><a href = "{{url_for('login')}}"> Logout </a></button>
+<button class="btn"><a href = "/logout"> Logout </a></button>
 
 {% endblock %}
