changes from Amanda

--- a/templates/home2.html
+++ b/templates/home2.html
@@ -17,15 +17,19 @@
 <br><br>
 <a href="#credits"><img src="../static/down-caret.png" alt="Credits" height="40"></a>
 <div class="how">
-  <table>
+  <table align="center" cellpadding="30">
     <tr>
-      <td></td>
-      <td></td>
+      <td><img id="logo" src="../static/Pensils.png" alt="storyboredlogo" height="200"></td>
+      <td><p style="font-size:30px;">Collaborative Writing</p></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td><img id="logo" src="../static/Book.png" alt="storyboredlogo" height="200"></td>
+      <td><p style="font-size:30px;">Create Stories</p></td>
     </tr>
+    <tr>
+      <td><img id="logo" src="../static/Infinity-Loop.png" alt="storyboredlogo" height="200"></td>
+     <td><p style="font-size:30px;">Infinite Possibilities</p></td>
+   </tr>
   </table>
 </div>
 <div class="team" id="credits">
