--- a/static/style.css
+++ b/static/style.css
@@ -81,7 +81,8 @@ a {
 }
 
 .how {
-    padding-top:50px;
+    padding-top:5%;
+    padding-bottom: 5%;
     background-color: #f1c40f;
     min-height: 100%;
 }
