--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,14 +7,14 @@
 <form method="POST">
   Username: <input type="text" name="user">
   <br><br>
-  Password: <input type="text" name="pass">
+  Password: <input type="password" name="pass">
   <br><br>
-  <input type="submit" name="submit" value="Submit">
-  <input type="submit" name="submit" value="Cancel">
+  <input type="submit" name="submit" value="Submit" class="btn">
+  <input type="submit" name="submit" value="Cancel" class="btn">
 </form>
 <br>
-<button><a href="/login">Back to Log In</a></button>
+<button class="btn"><a href="/login">Back to Log In</a></button>
 <br><br>
-<button><a href="/home">Back to Home Page</a></button>
+<button class="btn"><a href="/home">Back to Home Page</a></button>
 
 {% endblock %}
