--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,10 @@ Log In
 {% block contents %}
 
 <h1>Log in to Storybored</h1>
+<div class="error">
+  <h3 style="color:#c0392b">{{error}}</h3>
+</div>
+<br><br>
 <form method="POST">
   Username: <input type="text" name="username" placeholder="Username">
   <br><br>
