error message box doesnt work

--- a/static/style.css
+++ b/static/style.css
@@ -137,3 +137,8 @@ input[type="password"] {
 ::-webkit-input-placeholder {
     padding: 1%;
 }
+
+.error {
+    background-color:GRAY;
+    padding: 1%;
+}
