--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -17,7 +17,7 @@ Create a New Post
   <input type="text" name="title" placeholder="Title">
   <br><br><br>
   <h3>Body (maximum 256 characters)</h3>
-  <textarea name="Body" form="usrform" maxlength="256" placeholder="Enter text here..."></textarea>
+  <textarea type="text" name="body" maxlength="256" placeholder="Enter text here..."></textarea>
   <br>
   <input type="submit" name="sub" value="Submit" class="btn">
 </form>
