moved posts to story.html

--- a/templates/story.html
+++ b/templates/story.html
@@ -10,6 +10,11 @@ Story
 
 <h1> You are reading a story </h1>
 
+<br>
+Title: {{title}}
+<br>
+Body: {{body}}
+<br>
 <button class="btn"><a href="/edit">Add to this story</a></button>
 <br>
 <button class="btn"><a href="/userpage">Back to the Main Page</a></button>
