Sorta just an example of how I might do an error box. Shadow might be overkill tho, eh?

--- a/static/style.css
+++ b/static/style.css
@@ -139,6 +139,12 @@ input[type="password"] {
 }
 
 .error {
-    background-color:GRAY;
-    padding: 1%;
+    background-color: gray;
+    background-color: rgba(150, 150, 150, 0.8);
+    color: darkred;
+    border-radius: 1em;
+    box-shadow: 0.5em 0.5em 0.25em rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    margin: 0.5em auto;
+    padding: 0.5em 1em;
 }
