--- a/static/style.css
+++ b/static/style.css
@@ -139,9 +139,8 @@ input[type="password"] {
 }
 
 .error {
-    background-color: gray;
-    background-color: rgba(150, 150, 150, 0.8);
-    color: darkred;
+    background-color: #c0392b;
+    color: WHITE;
     border-radius: 1em;
     box-shadow: 0.5em 0.5em 0.25em rgba(0, 0, 0, 0.2);
     display: inline-block;
