--- a/static/style.css
+++ b/static/style.css
@@ -147,3 +147,27 @@ input[type="password"] {
     margin: 0.5em auto;
     padding: 0.5em 1em;
 }
+/* ----- USERPAGE SPECIFIC FORMATTING ----- */
+
+.header {
+    position:absolute;
+    left:0; right:0;
+    height: 80px;
+    background-color: #2c3e50;
+}
+.sidebar {
+    position:absolute;
+    left:0; top:80px; bottom: 0;
+    width: 250px;
+    background-color: #8e44ad;
+}
+.main {
+    position: absolute;
+    left:250px; top:92px; right:0; bottom:0;
+    background-color: #1abc9c;
+}
+ #logout {
+  float: right;
+  padding: 10px 10px 10px;
+  display: inline-block;
+ }
