userpage v1 - with sidebar

--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -1,33 +1,39 @@
 {% extends "base.html"  %}
 
-{% block title %}
-
-Welcome, {{uname}}
-
-{% endblock %}
+{% block title %} Welcome, {{uname}} {% endblock %}
 
 {% block contents %}
 
-<h1> Welcome, <u>{{uname}}</u>! </h1>
+<div class="container">
+	<div class="sidebar">
+		<p style="font-size:10">Sidebar</p>
+	</div>
 
-<button class="btn"><a href="{{url_for('newpost')}}"> Make a New Post </a></button>
-<center>
-<table>
-   <tr>
-     <td class=cell><a href="{{url_for('story')}}">
-	 Hello
-	 </a>
-	 <br>
-	 by
-	 <br>
-	 Author
-     </td>
-   </tr>
-</table>
-</center>
+	<div class="header">
+		<h1> Welcome, <u>{{uname}}</u>!</h1>
+		<button class="btn" id="logout"><a href = "/logout"> Logout </a></button>
+	</div>
+	
+	
+	<div class="main">
+	<button class="btn"><a href="{{url_for('newpost')}}"> Make a New Post </a></button>
+	<center>
+	<table>
+	   <tr>
+	     <td class=cell><a href="{{url_for('story')}}">
+		 Hello
+		 </a>
+		 <br>
+		 by
+		 <br>
+		 Author
+	     </td>
+	   </tr>
+	</table>
+	</center>
 
-<br><br>
+	<br><br>
 
-<button class="btn"><a href = "/logout"> Logout </a></button>
-
+	</div>
+</div>
 {% endblock %}
