--- a/static/style.css
+++ b/static/style.css
@@ -158,8 +158,9 @@ input[type="password"] {
     background-color: #1abc9c;
 }
  #logout {
-  float: right;
-  padding: 10px 10px 10px;
+  position: absolute;
+  bottom: 0;
+  left: 75px;
   display: inline-block;
  }
 
