--- a/static/style.css
+++ b/static/style.css
@@ -145,6 +145,9 @@ input[type="password"] {
     left:0; right:0;
     height: 80px;
     background-color: #2c3e50;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
 }
 .sidebar {
     position:absolute;
@@ -157,11 +160,12 @@ input[type="password"] {
     left:250px; top:92px; right:0; bottom:0;
     background-color: #1abc9c;
 }
- #logout {
-  float: right;
-  padding: 10px 10px 10px;
-  display: inline-block;
- }
+
+#logout {
+    float: right;
+    padding: 10px 10px 10px;
+    display: inline-block;
+}
 
 .error {
     background-color: #e74c3c;
