--- a/static/style.css
+++ b/static/style.css
@@ -145,10 +145,13 @@ input[type="password"] {
     left:0; right:0;
     height: 80px;
     background-color: #2c3e50;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
 }
 .sidebar {
     position:absolute;
-    left:0; top:80px; bottom: 0;
+    left:0; top:0; bottom: 0;
     width: 250px;
     background-color: #8e44ad;
 }
@@ -172,4 +175,11 @@ input[type="password"] {
     display: inline-block;
     margin: 0.5em auto;
     padding: 0.5em 1em;
+}
+
+.headtext {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 80px;
 }
