--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -10,7 +10,7 @@
   <div class="header"></div>
   <div class="headtext">
     <h1 class="headtext"> Welcome, <u>{{uname}}</u>!</h1>
-    <button class="btn" style="float: right"><a href="/logout"> Logout </a></button>
+   <a href="/logout" class="btn" style="float: right"> Logout </a>
   </div>
   
   
