--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -4,7 +4,8 @@
 
 <div class="container">
   <div class="sidebar">
-    <p style="font-size:10">Sidebar</p>
+    <br><br><br><br>
+    <h3>Sidebar</h3>
   </div>
   
   <div class="header"></div>
