--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -18,6 +18,15 @@
   <div class="main">
     <button class="btn"><a href="{{url_for('newpost')}}"> Make a New Post </a></button>
     <center>
+      <div class="book">
+	<br><br><br><br>
+	<a href="/story">Hello</a>
+	<br>
+	by
+	<br>
+	Author
+      </div>
+      <br><br>
       <table>
 	<tr>
 	  <td class=cell><a href="{{url_for('story')}}">
