--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -5,7 +5,8 @@
 <div class="container">
   <div class="sidebar">
     <br><br><br><br>
-    <h3>Sidebar</h3>
+    <h3>{{uname}}</h3>
+    <h3>Your Posts</h3>
   </div>
   
   <div class="header"></div>
