edited story page:

--- a/templates/story.html
+++ b/templates/story.html
@@ -9,7 +9,7 @@ Story
 {% block contents %}
 
 <h1>{{ title }}</h1>
-
+<h3>By {{author}}</h3>
 {{body}}
 <br>
 <button class="btn"><a href="/edit">Add to this story</a></button>
