--- a/static/style.css
+++ b/static/style.css
@@ -190,3 +190,25 @@ input[type="password"] {
     width: 200px;
     height: 200px;
 }
+
+/* ----- STORYPAGE SPECIFIC FORMATTING ----- */
+.storyheader {
+    position: absolute;
+    left:0; right:0;
+    height: 125px;
+    background-color: #2c3e50;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
+}
+.return {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.story {
+  position: absolute;
+  top: 150px;
+  left: 100px;
+}
