--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,9 +11,9 @@ Sign Up
 <h1>Sign up here</h1>
 
 <form method="POST">
-  Username: <input type="text" name="user">
+  Username: <input type="text" name="user" placeholder="Username">
   <br><br>
-  Password: <input type="password" name="pass">
+  Password: <input type="password" name="pass" placeholder="Password">
   <br><br>
   <input type="submit" name="submit" value="Submit" class="btn">
   <input type="submit" name="submit" value="Cancel" class="btn">
