--- a/templates/edit.html
+++ b/templates/edit.html
@@ -10,7 +10,7 @@ Edit Story
 
 <h1>Add a line to Story</h1>
 <form method="POST">
-  <textarea name="newline" form="usrform" maxlength="256" placeholder="Enter here..."></textarea>
+  <textarea type="text" name="body" maxlength="256" placeholder="Enter text here..."></textarea>
   <br>
   <input type="submit" name="sub" value="Submit" class="btn">
 </form>
