--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@ Log In
 <br>
 <button class="btn"><a href="{{url_for('signup')}}">Sign Up</a></button>
 <br><br>
-DEVELOPER's NOTE: type any username, password = "pass" to sign in
+<h4>NEW DEVELOPER'S NOTE: ACCOUNTS CAN NOW BE CREATED. FEEL FREE TO GIVE IT A TRY.<br>OTHERWISE, USERNAME="test", PASSWORD="test"</h4>
 <br><br>
 <button class="btn"><a href="/home">Back to the Home Page</a></button>
 
