--- a/templates/home.html
+++ b/templates/home.html
@@ -5,16 +5,17 @@
            that being said, this is an index page, so the rules are different. 
   -->
 <div class="wrapper">
-<img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo">
+<img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="225">
 <div class="fade-in title">
     <span style="font-size:100px;line-height:200%">StoryBored</span>
 </div>
 <div class="fade-in description">
     <p style="font-size:20px;margin-top:-10px;line-height:30px;">Where you come to write stories <i>on</i> our board<br/>
     <i>when</i> you're bored.</p>
-</div>
+    <br></div>
 <a class="btn" href="/login">LOGIN</a>
 <br><br>
+
 <a href="#credits"><img src="../static/down-caret.png" alt="Credits" height="40"></a>
 <div class="how">
   <table align="center" cellpadding="30">
@@ -34,27 +35,24 @@
 </div>
 <div class="team" id="credits">
   <p style="font-size:80px; line-height: 200%">Our Team</p>
-  <table align="center" cellpadding="15">
-    <tr><td colspan="2" align="center">TEAM LEADER</td></tr>
+  <table align="center" cellpadding="15" class="bottomBorder">
     <tr>
-      <td><img src="../static/angela.png" alt="Leader" height="40"></td>
-      <td>Angela Chan</td>
+      <td><font size="4">LEADER</font></td>
+      <td><code><font size="5">Angela Chan</font></code></td>
     </tr>
-    <tr><td colspan="2" align="center">USER EXPERIENCE DESIGNER</td></tr>
     <tr>
-      <td><img src="../static/amanda.png" alt="UX" height="40"></td>
-      <td>Amanda Chiu</td>
+      <td><font size="4">UX</font></td>
+      <td><code><font size="5">Amanda Chiu</font></code></td>
     </tr>
-    <tr><td colspan="2" align="center">BACKEND DEVELOPER</td></tr>
     <tr>
-      <td><img src="../static/leon.png" alt="backend"></td>
-      <td>Leon Cheng</td>
+      <td><font size="4">BACKEND</font></td>
+      <td><code><font size="5">Leon Cheng</font></code></td>
     </tr>
-    <tr><td colspan="2" align="center">MIDDLEWARE DEVELOPER</td></tr>
     <tr>
-      <td><img src="../static/eric.png" alt="middleware" height="40"></td>
-      <td>Eric Stringham</td>
+      <td><font size="4">MIDDLEWARE</font></td>
+      <td><code><font size="5">Eric Stringham</font></code></td>
     </tr>
+    </code>
   </table>
   <p class="alignleft team">Zamansky Period 7 Fall 2015</p>
 </div>
