--- a/static/style.css
+++ b/static/style.css
@@ -138,6 +138,17 @@ input[type="password"] {
     padding: 1%;
 }
 
+table.bottomBorder { 
+  border-collapse: collapse;
+  border: 10px solid #3498db;
+  border-radius: 10px;
+  }
+table.bottomBorder td, 
+table.bottomBorder th { 
+  border-bottom: 1px solid #3498db; 
+  padding:30px; 
+  }
+
 /* ----- USERPAGE SPECIFIC FORMATTING ----- */
 
 .header {
@@ -201,14 +212,15 @@ input[type="password"] {
     -moz-opacity: 0.7;
     opacity: 0.7;
 }
-.return {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
 
 .story {
   position: absolute;
   top: 150px;
   left: 100px;
+}
+
+.return {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
