edited storybored logo

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
            that being said, this is an index page, so the rules are different. 
   -->
 <div class="wrapper">
-<img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="225">
+<img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" class="blogo">
 <div class="fade-in title">
     <span style="font-size:100px;line-height:200%">StoryBored</span>
 </div>
@@ -38,18 +38,22 @@
   <table align="center" cellpadding="15" class="bottomBorder">
     <tr>
       <td><font size="4">LEADER</font></td>
+      <td><img src="../static/angela.png"></td>
       <td><code><font size="5">Angela Chan</font></code></td>
     </tr>
     <tr>
       <td><font size="4">UX</font></td>
+      <td><img src="../static/amanda.png"></td>
       <td><code><font size="5">Amanda Chiu</font></code></td>
     </tr>
     <tr>
       <td><font size="4">BACKEND</font></td>
+      <td><img src="../static/leon.png"></td>
       <td><code><font size="5">Leon Cheng</font></code></td>
     </tr>
     <tr>
       <td><font size="4">MIDDLEWARE</font></td>
+      <td><img src="../static/eric.png"></td>
       <td><code><font size="5">Eric Stringham</font></code></td>
     </tr>
     </code>
