--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,13 @@
 /* ----- NORMAL FORMATTING -----*/
+html {
+    height:100%;
+    min-height:100%;
+}
+
 body {
     margin: 0 0;
-    
+    height:100%;
+    min-height:100%;
     background-color: #1abc9c;
     color: #ffffff;
     text-align: center;
@@ -84,13 +90,16 @@ a {
     padding-bottom: 5%;
     background-color: #f1c40f;
     min-height: 100%;
+    height:auto !important;
+    height:100%;
 }
 
 .wrapper {
-    /*padding-top: 20px;*/
     padding-top: 100px;
     background-color:#1abc9c;
     min-height: 100%;
+    height:auto !important;
+    height:100%;
 }
 
 p {
@@ -109,6 +118,8 @@ p {
     background-color: #9b59b6;
     min-height: 100%;
     color: white;
+    height:auto !important;
+    height:100%;
 }
 
 .alignleft {
@@ -223,4 +234,8 @@ table.bottomBorder th {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+.blogo {
+    max-width:31%;
 }
