fixed up newpost page

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -20,8 +20,7 @@ Create a New Post
     <h1 class="headtext"> Create a new post </h1>
     <a href="/logout" class="btn" style="float: right"> Logout </a>
   </div>
-
-<br><br><br><br>
+<div class="main">
 
 <form method="POST">
   <h3>Title (maximum 256 characters)</h3> 
@@ -40,6 +39,6 @@ Create a New Post
 
 <br><br>
 
-<button class="btn"><a href="/logout"> Log Out </a></button>
+</div>
 
 {% endblock %}
