--- a/static/style.css
+++ b/static/style.css
@@ -138,6 +138,7 @@ textarea {
     height: 100px;
     padding: 1%;
     border: none;
+    resize: none;
 }
 
 input[type="password"] {
@@ -226,8 +227,7 @@ table.bottomBorder th {
 
 .story {
   position: absolute;
-  top: 150px;
-  left: 100px;
+  left:-550px; top:180px; right:0; bottom:0;
 }
 
 .return {
@@ -238,4 +238,36 @@ table.bottomBorder th {
 
 .blogo {
     max-width:31%;
+}
+
+/* ----- LOGIN SPECIFIC FORMATTING ----- */
+
+.loginheader {
+    position: absolute;
+    left:0; right:0;
+    height: 80px;
+    background-color: #2c3e50;
+}
+
+.loginbody {
+  left: 0; right: 0;
+  position: absolute;
+  top: 120px;
+  text-align: center;
+}
+
+.loginbody p {
+  color: #2c3e50;
+  
+}
+
+table.loginborder { 
+  border-collapse: collapse;
+  border: 10px solid #2c3e50;
+  border-radius: 10px;
+  }
+
+.title {
+    width: 20%;
+    height: 25px;
 }
