formatting home and login

--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #1abc9c;
     color: #ffffff;
     text-align: center;
-    font-family: "Helvetica Neue", Helvectia, sans-serif;
+    font-family: "Helvetica Neue", Helvectica, sans-serif;
 }
 
 .btn {
@@ -60,7 +60,7 @@ body {
   animation-duration:1.5s;
 }
 
-.fade-in.title {
+.fade-in .title {
   -webkit-animation-delay: 0.2s;
   -moz-animation-delay: 0.2s;
   animation-delay: 0.2s;
@@ -249,7 +249,11 @@ table.bottomBorder th {
     height: 80px;
     background-color: #2c3e50;
 }
-
+.loginheader img {
+  position: relative;
+  top: 15px;
+  left: 25px;
+}
 .loginbody {
   left: 0; right: 0;
   position: absolute;
@@ -266,9 +270,4 @@ table.loginborder {
   border-collapse: collapse;
   border: 10px solid #2c3e50;
   border-radius: 10px;
-  }
-
-.title {
-    width: 20%;
-    height: 25px;
 }
