fix Storybored title

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,10 @@
   -->
 <div class="wrapper">
 <img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" class="blogo">
-<div class="fade-in title">
-    <span style="font-size:100px;line-height:200%">StoryBored</span>
+<div style="" class="fade-in title">
+    <span style="font-size:100px; line-height:200%;">StoryBored</span>
 </div>
+<br> <br>
 <div class="fade-in description">
     <p style="font-size:20px;margin-top:-10px;line-height:30px;">Where you come to write stories <i>on</i> our board<br/>
     <i>when</i> you're bored.</p>
