--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,8 @@ Log In
 
 {% block contents %}
 
-<div class="loginheader"><h1>Log in to Storybored</h1></div>
+<div class="loginheader">
+<img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" class="blogo"><h1>Log in to Storybored</h1></div>
 <div class="loginbody">
 {% if error %}
 <div class="error">
