--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@ Log In
 {% block contents %}
 
 <div class="loginheader">
-<img id="logo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" class="blogo"><h1>Log in to Storybored</h1></div>
+<img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50"><h1>Log in to Storybored</h1></div>
 <div class="loginbody">
 {% if error %}
 <div class="error">
