--- a/static/style.css
+++ b/static/style.css
@@ -249,8 +249,8 @@ table.bottomBorder th {
     height: 80px;
     background-color: #2c3e50;
 }
-.loginheader img {
-  position: relative;
+.smalllogo {
+  position: absolute;
   top: 15px;
   left: 25px;
 }
