--- a/static/style.css
+++ b/static/style.css
@@ -248,6 +248,9 @@ table.bottomBorder th {
     left:0; right:0;
     height: 80px;
     background-color: #2c3e50;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
 }
 .smalllogo {
   position: absolute;
