--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -17,6 +17,7 @@ Create a New Post
 
   <div class="header"></div>
   <div class="headtext">
+    <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
     <h1 class="headtext"> Create a new post </h1>
     <a href="/logout" class="btn" style="float: right"> Logout </a>
   </div>
