--- a/templates/story.html
+++ b/templates/story.html
@@ -13,6 +13,7 @@
   
   <div class="header"></div>
   <div class="headtext">
+    <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
     <h1 class="headtext">{{ title }}</h1>
    <a href="/logout" class="btn" style="float: right"> Logout </a>
   </div>
