added logo to edit

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -16,6 +16,7 @@ Edit Story
 
 <div class="header"></div>
 <div class="headtext">
+  <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
   <h1 class="headtext"> Welcome, <u>{{uname}}</u>!</h1>
   <a href="/logout" class="btn" style="float: right"> Logout </a>
 </div>
